src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
body {
  background-color: #151315;
  color: #ffffff99;
}
.custom_text_gradient {
  background-image: -webkit-linear-gradient(45deg, #db00fb, #ff6000);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.custom_border_gradient {
  position: relative;
  padding: 3.5px 14px;
  border-radius: 8px;
}
.custom_border_gradient::before {
  content: '';
  position: absolute;
  inset: 0;
  border-radius: 8px;
  border: 1px solid transparent; /*2*/
  background: linear-gradient(45deg, #db00fb, #ff6000) border-box;
  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  mask-composite: exclude;
}

.message {
  position: relative;
  padding: 6px 8px;
  padding-top: 0px;
  border-radius: 8px;
}
.message::after {
  z-index: -12;
  content: '';
  position: absolute;
  inset: 0;
  border-radius: 9999px;
  border: 1px solid transparent; /*2*/
  background: linear-gradient(#fff 0 0) border-box;
  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
}

